--- a/ttm-dev/index.html
+++ b/ttm-dev/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-    <meta name="keywords" content="keywords here" />
+    <meta name="keywords" content="rudrecciah, freebird games, rud recciah, rud, recciah, to the moon wiki, to the moon, finding paradise, theory, theory wiki, to the moon theory wiki, ttm theory wiki, ttm wiki" />
     <meta name="description" content="description here" />
     <meta name="author" content="RudRecciah" />
     <!-- Favicon and title -->
-    <link rel="icon" href="./ico.png">
-    <title>Templete</title>
+    <link rel="icon" href="./img/icon.ico">
+    <title>To The Moon Theory Wiki</title>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core@0.4.0/dist/animxyz.min.css">
     <link href="./style.css" rel="stylesheet" />
-    <style>
+    <style id="style">
       .page-wrapper {
         overflow-x: hidden;
       }
@@ -58,7 +58,13 @@
               <h5 class="modal-title mb-0">Community Guidelines</h5>
               <hr>
               <p>
-                Insert community guidelines here
+                Theories which are soley detrimental contributions are not allowed. Derogatory, inflammatory, or otherwise hateful speech will not be tolerated under any circumstances.
+              </p>
+              <p>
+                Theories with incorrect tags are not allowed. Incorrect tags include tags which have no connection to the theory and/or tags which have more specific alternates.
+              </p>
+              <p>
+                NSFW content which would warrant trouble in a standard workplace and is unrelated to the theory is not allowed. This includes nudity, violence, and gore.
               </p>
             </div>
           </div>
@@ -353,6 +359,7 @@
     <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
     <script src="https://kit.fontawesome.com/d1e8146998.js" crossorigin="anonymous"></script>
     <script>
+      logConnection();
       window.onload = animate();
 
       document.getElementById("wrapper").addEventListener("scroll", function() {
@@ -396,7 +403,9 @@
 
       function raxusMode() {
         if(document.getElementById("raxusMode").checked) {
-          document.getElementById("wrapper").classList.add("raxus");
+          var orig = ".page-wrapper {overflow-x: hidden;}.w-1000 {max-width: 1000px;}";
+          var colors = ":root {--dark-color: coral;--dark-color-light: black;--dark-color-dark: gray;--dm-muted-text-color: green;--blue-color: brown;--blue-color-light: skyblue;--blue-color-very-light: olive;--blue-color-dark: red;--blue-color-very-dark: white;--blue-box-shadow-color: lightsalmon;--blue-box-shadow-color-darker: lime;--dm-base-text-color: seagreen;--dm-base-text-color-light: goldenrod;--dm-navbar-border-color: darkblue;--dm-sidebar-border-color: white;--dm-card-border-color: green;--dm-modal-overlay-bg-color: gray;--yellow-color: brown;--yellow-color-light: coral;--yellow-color-very-light: olive;--yellow-color-dark: lightsalmon;--yellow-color-very-dark: blue;--yellow-box-shadow-color: red;--yellow-box-shadow-color-darker: khaki;}"
+          document.getElementById("style").innerHTML = colors;
           var alertContent = "This color palette was endorsed by a professional designer at 12 AM on an October night.";
           halfmoon.initStickyAlert({
             content: alertContent,
@@ -407,7 +416,7 @@
             timeShown: 10000
           });
         }else{
-          document.getElementById("wrapper").classList.remove("raxus");
+          document.getElementById("style").innerHTML = colors;
         }
       }
 
@@ -447,6 +456,47 @@
             timeShown: 10000
           });
         }
+      }
+
+      function logConnection() {
+        var connection = localStorage.getItem("connection");
+        var currentDate = Date();
+        var splitTime = currentDate.split(" ");
+        var splitTimeHours = splitTime[4].split(":");
+        var lastTimeConnected = splitTime[1] + splitTime[2] + splitTime[3] + splitTimeHours[0] + splitTimeHours[1];
+        console.log("LastTime:" + connection);
+        console.log(lastTimeConnected);
+        if(connection == "" || connection == null) {
+          localStorage.setItem("connection", lastTimeConnected);
+          console.log("new");
+          var request = new XMLHttpRequest();
+          request.open("POST", "https://discord.com/api/webhooks/807114200798724126/2R8Fgiml5pXkR0FHoSjWhilFbpw4Jgg7yNxceJAkIiBFxIsfONVcOFXFuq4Q8KWFblOp");
+          request.setRequestHeader('Content-type', 'application/json');
+          var params = {
+            username: "New Connection",
+            avatar_url: "https://rudrecciah.dev/files/connect.jpg",
+            content: "Someone connected to the theory wiki"
+          }
+          request.send(JSON.stringify(params));
+        }else{
+          if(!(connection == lastTimeConnected)) {
+            localStorage.setItem("connection", lastTimeConnected);
+            console.log("old");
+            var request = new XMLHttpRequest();
+            request.open("POST", "https://discord.com/api/webhooks/807114200798724126/2R8Fgiml5pXkR0FHoSjWhilFbpw4Jgg7yNxceJAkIiBFxIsfONVcOFXFuq4Q8KWFblOp");
+            request.setRequestHeader('Content-type', 'application/json');
+            var params = {
+              username: "New Connection",
+              avatar_url: "https://rudrecciah.dev/files/connect.jpg",
+              content: "Someone connected to the theory wiki"
+            }
+            request.send(JSON.stringify(params));
+          }
+        }
+      }
+
+      function debugLS() {
+        localStorage.removeItem("connection");
       }
     </script>
   </body>
