--- a/ttm-dev/index.html
+++ b/ttm-dev/index.html
@@ -442,7 +442,7 @@
           request.setRequestHeader('Content-type', 'application/json');
           var params = {
             username: "New Report",
-            avatar_url: "https://rudrecciah.dev/files/mod.png",
+            avatar_url: "https://rudrecciah.dev/img/mod.png",
             content: report
           }
           request.send(JSON.stringify(params));
@@ -474,7 +474,7 @@
           request.setRequestHeader('Content-type', 'application/json');
           var params = {
             username: "New Connection",
-            avatar_url: "https://rudrecciah.dev/files/connect.jpg",
+            avatar_url: "https://rudrecciah.dev/img/connect.jpg",
             content: "Someone connected to the theory wiki"
           }
           request.send(JSON.stringify(params));
@@ -487,7 +487,7 @@
             request.setRequestHeader('Content-type', 'application/json');
             var params = {
               username: "New Connection",
-              avatar_url: "https://rudrecciah.dev/files/connect.jpg",
+              avatar_url: "https://rudrecciah.dev/img/connect.jpg",
               content: "Someone connected to the theory wiki"
             }
             request.send(JSON.stringify(params));
