refactoring and some other things

--- a/ttm-dev/index.html
+++ b/ttm-dev/index.html
@@ -235,12 +235,12 @@
       <div class="content-wrapper">
         <div class="container-fluid">
           <div class="content">
-            <div class="card">
+            <div id="home" class="card">
               <h1 class="card-title">Welcome!</h1>
               <hr>
               <p>jams you sodding tic tac this is indev moate come back later with the roight properh 2004 chevy highlander</p>
             </div>
-            <div class="card">
+            <div id="about" class="card">
               <h1 class="card-title">About</h1>
               <hr>
               <p>Text here</p>
