--- a/ttm-dev/index.html
+++ b/ttm-dev/index.html
@@ -33,7 +33,7 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
     <div class="modal ie-scroll-fix modal-full" id="modal-submit" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content minh">
-          <a href="#" class="close" role="button" aria-label="Close" onclick="halfmoon.toggleModal('modal-submit')">
+          <a href="#" class="close" role="button" aria-label="Close" onclick="toggleSubmit()">
             <span aria-hidden="true" class="lh-0"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
               <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
               </svg></span>
@@ -42,8 +42,52 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
             <div class="spacer-lg"></div>
             <div class="w-full">
               <h5 class="modal-title mb-0">Add Theory</h5>
+              <p class="mt-0">By adding a theory, you agree to our Community Guidelines.</p>
               <hr>
-              
+              <form method="GET" class="mw-full">
+                <div class="form-group">
+                  <label for="form-name" class="required">Theory Name</label>
+                  <input type="text" class="form-control" id="form-name" placeholder="Theory Name" required="required">
+                  <div class="form-text">
+                    Title your theory in a short and simple way.
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="form-writer" class="required">Your Name</label>
+                  <input type="text" class="form-control" id="form-writer" placeholder="Your Name" required="required">
+                  <div class="form-text">
+                    Your name will be used to tell people who wrote your theory.
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="form-tags" class="required">Theory Tags</label>
+                  <select class="form-control" id="form-tags" multiple="multiple" size="10" required="required">
+                    <option value="0">Quintessence: The Blighted Venom</option>
+                    <option value="1">The Mirror Lied</option>
+                    <option value="2">Do You Remember My Lullaby?</option>
+                    <option value="3">Quintessence: The Blighted Venom's Lost Chapter</option>
+                    <option value="4">To The Moon</option>
+                    <option value="5">Sigmund Minisode 1</option>
+                    <option value="6">Sigmund Minisode 2</option>
+                    <option value="7">A Bird Story</option>
+                    <option value="8">Finding Paradise</option>
+                    <option value="9">Impostor Factory</option>
+                  </select>
+                  <div class="form-text">
+                    Choose one or more tags for people to search for your theory by.
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="form-theory" class="required">Theory Content</label>
+                  <textarea class="form-control" placeholder="Add your theory here." required="required"></textarea>
+                  <div class="form-text">
+                    You can <em>italicize</em> and <strong>bold</strong> parts of your theory by wrapping said parts in <kbd>*</kbd> and <kbd>**</kbd>, respectively.
+                  </div>
+                </div>
+                <input class="btn btn-primary btn-block" type="submit" value="Add Theory">
+              </form>
+              <div class="spacer-lg"></div>
+              <div class="spacer-lg"></div>
             </div>
           </div>
         </div>
@@ -422,6 +466,10 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
         if(!(document.getElementById("modal-guidelines").classList.contains("show"))) {
           halfmoon.toggleModal("modal-guidelines");
         }
+      }
+
+      function toggleSubmit() {
+        halfmoon.toggleModal("modal-submit");
       }
 
       function reportTheory() {
