--- a/ttm-dev/index.html
+++ b/ttm-dev/index.html
@@ -81,7 +81,7 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
                   <label for="form-theory" class="required">Theory Content</label>
                   <textarea name="theory" class="form-control" placeholder="Add your theory here." required="required"></textarea>
                   <div class="form-text">
-                    You can <em>italicize</em> and <strong>bold</strong> parts of your theory by wrapping said parts in <kbd>*</kbd> and <kbd>**</kbd>, respectively.
+                    You can <em>italicize</em>, <strong>bold</strong>, and <em><strong>boldly italicize</strong></em> parts of your theory by wrapping said parts in <kbd>*</kbd>, <kbd>**</kbd>, and <kbd>***</kbd> respectively.
                   </div>
                 </div>
                 <input class="btn btn-primary btn-block" type="submit" value="Submit Theory">
