--- a/ttm-dev/index.html
+++ b/ttm-dev/index.html
@@ -301,13 +301,12 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
               <h1 class="card-title">Theories</h1>
               <hr>
               <p>Text here</p>
-              <div class="row">
+              <div id="theoryList" class="row">
                 <div class="col-lg-6 col-12">
                   <div class="card cursor-link" onclick="loadTheory()">
                     <h1 id="theory-title" class="card-title mb-0 d-inline">Theory Title</h1>
                     <div id="theory-meta">
-                      <span>Written by </span>
-                      <span id="theory-meta-author">Author Name</span>
+                      <span>Written by Author Name</span>
                     </div>
                     <div id="theory-games">
                       <span class="badge badge-primary">
@@ -410,13 +409,13 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
     <script src="https://kit.fontawesome.com/d1e8146998.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.0.4/markdown-it.min.js"></script>
     <script>
       uploadTheory();
       logConnection();
 
-      document.getElementById("wrapper").addEventListener("scroll", function() {
-        animate();
-      });
+      window.onload = importTheory();
 
       function sidebar(div) {
         var active = getActive();
@@ -578,6 +577,106 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
           });
         }
       }
+
+      /* How this is gonna work:
+       * 
+       * it doesnt
+       * that is all
+       * no 
+       * 
+       * so how im gonn actually do it:
+       * get amount of json files from indexing file
+       * make as many templete divs as json files
+       * give each div a data attribute with the id of the json file
+       * for each div:
+       *   parse json file corresponding to id
+       *   replace the default filler text with the correct text
+       *   ye
+       * this **SHOULD** work
+       * i think...
+       */
+
+
+      // function importTheory() {
+      //   console.log("not here");
+      //   $.getJSON('https://raw.githubusercontent.com/RudRecciah/ttmtw-data/main/id.json', function(indexingData) {
+      //     console.log("not here either");
+      //     var countStr = indexingData.count;
+      //     console.log(countStr);
+      //     var count = parseInt(countStr);
+      //     console.log(count);
+      //     var amount = count;
+      //     var skip = indexingData.skip;
+      //     var theoryCounter = {current: "0"};
+      //     var i = 0;
+      //     console.log("not here either either");
+      //     console.log("Amount: " + amount);
+      //     for(i = 0; i < amount; i++) {
+      //       console.log("I: " + i);
+      //       $.getJSON('https://raw.githubusercontent.com/RudRecciah/ttmtw-data/main/' + i + '.json', function(query) {
+      //         var name = query.name;
+      //         var writer = query.writer;
+      //         var tags = query.tags;
+      //         var theory = query.theory;
+
+      //         var md = window.markdownit();
+      //         md.disable(['normalize', 'linkify', 'replacements', 'smartquotes', 'text', 'escape', 'backticks', 'strikethrough', 'link', 'image', 'autolink', 'html_inline', 'entity'])
+      //         var content = md.renderInline(theory);
+
+      //         var tag0 = {long: "Quintessence: The Blighted Venom", short: "Quintessence"}
+      //         var tag1 = {long: "The Mirror Lied", short: "TML"}
+      //         var tag2 = {long: "Do You Remember My Lullaby?", short: "DRYML"}
+      //         var tag3 = {long: "Quintessense: The Blighted Venom's Lost Chapter", short: "Lost Chapter"}
+      //         var tag4 = {long: "To The Moon", short: "TTM"}
+      //         var tag5 = {long: "Sigmund Minisode 1", short: "Minisode 1"}
+      //         var tag6 = {long: "Sigmund Minisode 2", short: "Minisode 2"}
+      //         var tag7 = {long: "A Bird Story", short: "ABS"}
+      //         var tag8 = {long: "Finding Paradise", short: "FP"}
+      //         var tag9 = {long: "Impostor Factory", short: "IF"}
+
+      //         var theoryMetaDiv = "<div class=\"col-lg-6 col-12\"><div class=\"card cursor-link\" onclick=\"loadTheory()\"><h1 id=\"theory-title-" + i + "\" class=\"card-title mb-0 d-inline\">" + "title" + "</h1><div id=\"theory-meta\"><span id=\"theory-meta-writer-" + i + "\">" + "Written by" + " author" + "</span></div><div id=\"theory-tags-" + i + "\"></div><div id=\"theory-content-trn\"><p id=\"theory-meta-content-" + i + "\" class=\"text-truncate mt-0\">" + "content" + "</p></div></div></div>"
+
+      //         document.getElementById("theoryList").innerHTML =  document.getElementById("theoryList").innerHTML + theoryMetaDiv;
+      //         tags.forEach((elementString, index) => {
+      //           var element = parseInt(elementString);
+      //           if(element == 0) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag0.long + "</span><span class=\"d-sm-none\">" + tag0.short + "</span></span></div>"
+      //             document.getElementById("theory-tags-" + i).innerHTML = document.getElementById("theory-tags-" + i).innerHTML + tagHTML;
+      //           }else if(element == 1) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag1.long + "</span><span class=\"d-sm-none\">" + tag1.short + "</span></span></div>"
+      //             document.getElementById("theory-tags-" + i).innerHTML = document.getElementById("theory-tags-" + i).innerHTML + tagHTML;
+      //           }else if(element == 2) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag2.long + "</span><span class=\"d-sm-none\">" + tag2.short + "</span></span></div>"
+      //             document.getElementById("theory-tags-" + i).innerHTML = document.getElementById("theory-tags-" + i).innerHTML + tagHTML;
+      //           }else if(element == 3) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag3.long + "</span><span class=\"d-sm-none\">" + tag3.short + "</span></span></div>"
+      //             document.getElementById("theory-tags-" + i).innerHTML = document.getElementById("theory-tags-" + i).innerHTML + tagHTML;
+      //           }else if(element == 4) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag4.long + "</span><span class=\"d-sm-none\">" + tag4.short + "</span></span></div>"
+      //             document.getElementById("theory-tags-" + i).innerHTML = document.getElementById("theory-tags-" + i).innerHTML + tagHTML;
+      //           }else if(element == 5) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag5.long + "</span><span class=\"d-sm-none\">" + tag5.short + "</span></span></div>"
+      //             document.getElementById("theory-tags-" + i).innerHTML = document.getElementById("theory-tags-" + i).innerHTML + tagHTML;
+      //           }else if(element == 6) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag6.long + "</span><span class=\"d-sm-none\">" + tag6.short + "</span></span></div>"
+      //             document.getElementById("theory-tags-" + i).innerHTML = document.getElementById("theory-tags-" + i).innerHTML + tagHTML;
+      //           }else if(element == 7) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag7.long + "</span><span class=\"d-sm-none\">" + tag7.short + "</span></span></div>"
+      //             document.getElementById("theory-tags-" + i).innerHTML = document.getElementById("theory-tags-" + i).innerHTML + tagHTML;
+      //           }else if(element == 8) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag8.long + "</span><span class=\"d-sm-none\">" + tag8.short + "</span></span></div>"
+      //             document.getElementById("theory-tags-" + i).innerHTML = document.getElementById("theory-tags-" + i).innerHTML + tagHTML;
+      //           }else if(element == 9) {
+      //             var tagHTML = "<div id=\"theory-games\"><span class=\"badge badge-primary\"><span class=\"d-none d-sm-inline-block\">" + tag9.long + "</span><span class=\"d-sm-none\">" + tag9.short + "</span></span></div>"
+      //           }
+      //         });
+      //         document.getElementById("theory-title-" + i).innerText = name;
+      //         document.getElementById("theory-meta-writer-" + i).innerText = writer;
+      //         document.getElementById("theory-meta-content-" + i).innerText = content;
+      //       });
+      //     }
+      //   });
+      // }
 
       function debugLS() {
         localStorage.removeItem("connection");
