--- a/ttm-dev/test.html
+++ b/ttm-dev/test.html
@@ -7,12 +7,34 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.0.4/markdown-it.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.0.4/markdown-it.min.js"></script>
   <script>
     var md = window.markdownit();
     md.disable([ 'link', 'image', 'emphasis' ])
     var result = md.renderInline('*markdown-it* **rulezz!**');
     console.log(result);
+  </script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script>
+    // var req = $.ajax({
+    //     url : 'https://raw.githubusercontent.com/RudRecciah/ttmtw-data/main/0.json',
+    //     dataType : "jsonp",
+    //     timeout : 10000
+    // });
+
+    // req.success(function() {
+    //     console.log('Yes! Success!');
+    // });
+
+    // req.error(function() {
+    //     console.log('Oh noes!');
+    // });
+    // $.getJSON('https://raw.githubusercontent.com/RudRecciah/ttmtw-data/main/4.json', function(query) {
+    // }).complete(function() {
+    //   console.log(query);
+    // }).fail(function() {
+    //   console.log("fail");
+    // })
   </script>
 </body>
 </html>
